# rust-logging-samples

./: CONTRIBUTIONS.md  Cargo.toml  README.md
src/: env_logger.rs  lib.rs  log4rs.rs
