[package]
name = "rust-logging-samples"
version = "0.1.0"
authors = ["Jack Chan <j4ckcyw@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.8"
log = "0.4"

[[bin]]
name = "env_logger"
path = "src/env_logger.rs"
